@@ -483,40 +483,7 @@ int do_action(buffer *b, action a, int c, unsigned char *p) {
 		/* Note the use of ne_columns-1. This avoids a double horizontal scrolling each time a
 			word wrap happens with b->opt.right_margin = 0. */
 
-		if (b->opt.word_wrap && b->win_x + b->cur_x >= (b->opt.right_margin ? b->opt.right_margin : ne_columns - 1)) error = word_wrap(b);
-
-
-		if (error == ERROR) {
-			assert_buffer_content(b);
-			/* No word wrap. */
-			if (b->syn) update_line(b, b->cur_y, TRUE, FALSE);
-			assert_buffer_content(b);
-		}		
-		else {		
-			/* Fixes in case of word wrapping. */
-			int wont_scroll = b->win_x == 0;
-			int a = 0;
-			if (b->syn) update_line(b, b->cur_y, FALSE, TRUE);
-			else update_partial_line(b, b->cur_y, calc_width(b->cur_line_desc, b->cur_line_desc->line_len, b->opt.tab_size, b->encoding) - b->win_x, FALSE, FALSE);	
-
-			need_attr_update = FALSE;
-			/* Poke the correct state into the next line. */
-			if (b->syn) ((line_desc *)b->cur_line_desc->ld_node.next)->highlight_state = b->next_state;
-
-			if (b->opt.auto_indent) a = auto_indent_line(b, b->cur_line + 1, (line_desc *)b->cur_line_desc->ld_node.next, INT_MAX);
-			move_to_sol(b);
-			line_down(b);
-			goto_pos(b, error + a);
-                                                               
-			if (wont_scroll) {
-				if (b->cur_line == b->num_lines - 1) update_line(b, b->cur_y, FALSE, FALSE);
-				else scroll_window(b, b->cur_y, 1);
-			}
-
-			need_attr_update = TRUE;
-			assert_buffer_content(b);
-		}
-
+		if (b->opt.word_wrap && b->win_x + b->cur_x >= (b->opt.right_margin ? b->opt.right_margin : ne_columns - 1)) word_wrap(b);
 		assert_buffer_content(b);
 		return OK;
 	}
