@@ -4,7 +4,7 @@
 
   * Pathologically long-running PARAGRAPH commands are now stoppable (^-\).
   
-  * Move modified flag '*' to end of status line to be easier to spot.
+  * Move modified flag '*' to right end of status line to be easier to see.
 
   * COPY, CUT, ERASE copy the correct text to the clip and do not crash
     any more when in free form mode and cursor or mark is beyond the
